<resources>
    <string name="app_name">Lumanti</string>
    <string name="view_saved_forms">View Saved Forms \n(सेभ गरिएका फाइलहरु)</string>
    <string name="shelter_status">Shelter Status \n(स्थाइ आवास निर्माण तथ्याङ्क)</string>
    <string name="total_mem_validation_error">total family member error, please review your input(कुल संख्या मिलेन)</string>
    <string name="stringG1">Damage Type(क्षतिको प्रकार)</string>
    <string name="stringG2">District Name(जिल्ला)</string>
    <string name="stringG3">District Code(जिल्ला कोड)</string>
    <string name="stringG4">Rural Municipality(गाउँपालिका/नगरपालिका)</string>
    <string name="stringG5">Current Ward no(हालको वडा नं)</string>
    <string name="stringG6">Previous VDC/Mun(पुरानो गा.वि.स./नगरपालिका )</string>
    <string name="stringG7">Previous Ward no(पुरानो वडा नं)</string>
    <string name="stringG8">Tole(टोल)</string>
    <string name="stringG9">House code(घर नं)</string>
    <string name="stringG10">Nissa no(निस्सा नं)</string>
    <string name="stringG11">Citizenship No(नागरिकता नं)</string>
    <string name="stringG12">PA no(PA नं)</string>
    <string name="stringNext">Next</string>
    <string name="head_of_the_householdLBL">Head of the Household (घरमुलीको जानकारी)</string>
    <string name="intervieweeLBL">Interviewee Details (अन्तरबार्ता दिने व्यक्तिको जानकारी)</string>
    <string name="stringA1">Name(नाम)</string>
    <string name="stringA1_a">Sex(लिङ्ग)</string>
    <string name="stringA1_b">Age(उमेर)</string>
    <string name="family_membersLBL">Family Members (परिवारको सदस्य संख्या)</string>
    <string name="stringA2_a">Below 5(५ वर्ष मुनि)</string>
    <string name="stringA2_b">Between 5-14(५-१४)</string>
    <string name="stringA2_c">Between 15-64(१५-६४)</string>
    <string name="stringA2_d">Above 65(६५ वर्ष माथी)</string>
    <string name="stringA2_f">Male No(पुरुष)</string>
    <string name="stringA2_g">female No(महिला)</string>
    <string name="stringA2_h">Other No(अन्य)</string>
    <string name="stringA2_e">Total No. Of Family Members (परिवारको कुल सदस्य संख्या)</string>
    <string name="disable_pregnant_lactatingLBL">Disable/Pregnant/Lactating(अपाङ्ग/गर्भवती/स्तनपान गराइरहेको )</string>
    <string name="stringA3">Do you have disable/pregnant/lactating women in your family? (के तपाईँको घरमा अपाङ्ग  / गर्भवती / स्तनपान गराइरहेको सदस्यहरु छन्?)</string>
    <string name="stringA3_a">Please specify disable/pregnant/lactating (अपाङ्ग  / गर्भवती / स्तनपान गराइरहेको मध्ये छान्नुहोस्)</string>
    <string name="stringA3_b">Disability type (अपाङ्गताको किसिम)</string>
    <string name="stringA3_c">After earthquake or Before earthquake? (भूकम्प पहिले भएको वा पछि? )</string>
    <string name="stringA4">Interviewee Name (अन्तर्वार्ता दिने व्यक्तिको नाम)</string>
    <string name="stringA5">Relationship with house owner (घरधनी संगको सम्बन्ध )</string>
    <string name="stringA6">ontact No. (सम्पर्क न.)</string>
    <string name="stringA7">House Type (घरको प्रकार)</string>
    <string name="get_gps_locationBtnText">Get gps location (घरको GPS लिनुहोस्)</string>
    <string name="preview_mapBtnText">Preview Map (नक्सामा हर्नुहोस्)</string>
    <string name="photograph1LBL">Front image of the house with family member (घरको फोटो (अगाडी बाट परिवारका सदस्यहरु सहित)</string>
    <string name="photograph2LBL">Left imge of the house (घरको फोटो (देब्रेतिर बाट))</string>
    <string name="photograph3LBL">Right image of the house (घरको फोटो (दाहिनेतिर बाट)</string>
    <string name="photograph4LBL">Back image of the house (घरको फोटो (पछाडी बाट))</string>
    <string name="stringB2">What is the current living situation of your family and location? (तपाईँको परिवारको हालको बसोबास कस्तो छ? )</string>
    <string name="stringB2_a">Built By (निर्माण गरिदिने)</string>
    <string name="stringB2_b">Construction Type (निर्माणको प्रकार)</string>
    <string name="stringB2_c">Specify Others (अन्य खुलाउनुहोस्)</string>
    <string name="stringB3">Construction Status (निर्माणको स्थिति)</string>
    <string name="stringC1">Do you have idea about the process on the release of government reconstruction grant? (के तपाईँलाई नेपाल सरकारले पुनर्निर्माणका लागी उपलब्ध गराएको अनुदान र प्राप्त गर्ने तरिकाबारे केहि थाहा छ? )</string>
    <string name="stringC2">What kind of support have you received for shelter and livelihoods after the earthquake? (तपाईँले भूकम्पपछि आवास र जिविकाको लागी कुनै प्रकारका सहयोग प्राप्त गर्नुभएको छ? )</string>
    <string name="stringC2_a">Installment (लिएको किस्ता)</string>
    <string name="stringC2_b">Specify Received Kind Support (सामान सहयोग पाएको भए खुलाउनुहोस्)</string>
    <string name="stringD1">Do you have land with your land title? (के तपाईँको स्वामित्वमा जग्गाजमिन छ? )</string>
    <string name="stringD2">Land title at other place (अन्य ठाउँमा जमिन भएमा)</string>
    <string name="stringD2_a">Area of land (Approximate) Aana, Ropani (जमिनको क्षेत्रफल (रोपनी/आना) )</string>
    <string name="stringD3">Major source of income of your family (परिवारको प्रमुख आम्दानीको श्रोत)</string>
    <string name="stringD3_a">Income source (Others) (अन्य आम्दानीको श्रोत भए खुलाउनुहोस्)</string>
    <string name="stringD4">Are you member of any Saving Groups/Cooperative? (के तपाईँ कुनै बचत तथा सरकारी संस्थाको सदस्य हुनुहुन्छ? )</string>
    <string name="stringD4_a">Saving per month (मासिक बचत)</string>
    <string name="stringD5">Tentative monthly income (मासिक आम्दानी)</string>
    <string name="stringE1">Main source of drinking water (खानेपानीको प्रमुख श्रोत)</string>
    <string name="stringE1_a">Specify others (Water Source) (अन्य पानीको श्रोत भए खुलाउनुहोस्)</string>
    <string name="stringE2">Type of toilet (चर्पीको प्रकार)</string>
    <string name="stringF1">Have you participate in any household/community meeting, orientation programs on reconstruction in your VDC/ Ward ? (के तपाईँ आफ्नो गा.वि.स./वडामा घरेलु वा सामाजिक छलफल तथा अभिमुखिकरण कार्यक्रममा सहभागि हुनुभएको छ? )</string>
    <string name="stringF2">Have you (any one from your family member) attended trainings related with Disaster Preparedness / Housing reconstruction (Y/N)? (के तपाईँले वा परिवारको कुनै सदस्यले प्रकोप व्यवस्थापन वा पुनर्निर्माण सम्बन्धि तालिम लिनुभएको छ? )</string>
    <string name="stringF2_a">Attended disaster training (लिएको प्रकोपसम्बन्धि तालिम)</string>
    <string name="stringF2_b">Specify others (Disaster Training) (अन्य प्रकोप व्यवस्थापन सम्बन्धि तालिम भए खुलाउनुहोस्)</string>
    <string name="stringF3">Do you have any idea about Stockpiling (storage of search and rescue, first aid materials) in your VDC? (के तपाईँलाई गा.वि.स.मा खोजी, उद्धार तथा प्राथमिक उपचारका सामग्री भण्डारण गर्ने तरिकाबारे केहि थाहा छ?)</string>
    <string name="stringF4">Are you the member of Disaster Management Committee? (के तपाईँ प्रकोप व्यवस्थापन समितिको सदस्य हुनुहुन्छ?)</string>
    <string name="stringF6">Any specific information (अन्य महत्वपूर्ण जानकारी केहि भए भर्नुहोस्)</string>
    <string name="stringF7">Any gap identified by surveyor (प्रश्नकर्ताले थप्न चाहेका कुराहरु)</string>
    <string name="stringF8">Surveyor\'s Name (प्रश्नकर्ताको नाम)</string>
    <string name="stringF9">Date of Interview (अन्तर्वार्ता लिइएको मिति)</string>
    <string name="stringF5">Do you have any recommendation regarding reconstruction activities by Lumanti? (लुमन्तीले गरेका पुनर्निर्माणका कामहरुमा तपाईँको केहि सल्लाह सुझाव छ? )</string>
    <string name="sendBtnText">send</string>
    <string name="saveBtnText">save</string>
    <string name="data_sent_successfully">Data sent successfully</string>
    <string name="previous">Previous</string>
    <string-array name="sex">
        <item>"N/A"</item>
        <item>"पुरुष(Male)"</item>
        <item>"महिला(Female)"</item>
        <item>"अन्य(Other)"</item>
    </string-array>
    <string-array name="house_damage">
        <item>"N/A"</item>
        <item>"पूर्ण क्षति(Fully damaged)"</item>
        <item>"आंशिक क्षति(Partially damaged)"</item>
    </string-array>
    <string-array name="yes_no">
        <item>"N/A"</item>
        <item>"Yes(छ)"</item>
        <item>"No(छैन)"</item>
    </string-array>
    <string-array name="house_type">
        <item>"N/A"</item>
        <item>"Attached (अरुसंगै जोडिएको)"</item>
        <item>"Detached (अरुसंग नजोडिएको)"</item>
    </string-array>
    <string-array name="specify_dis_lac_preg">
        <item>"N/A"</item>
        <item>"Disable(अपाङ्ग)"</item>
        <item>"Pregnant(गर्भवती)"</item>
        <item>"Lactating(स्तनपान गराइरहेको)"</item>
    </string-array>
    <string-array name="before_after_earthquake">
        <item>"N/A"</item>
        <item>"Before Earthquake(भूकम्प पहिले)"</item>
        <item>"After Earthquake(भूकम्प पछि)"</item>
    </string-array>
    <string-array name="district_name">
        <item>"N/A"</item>
        <item>"Rasuwa(रसुवा)"</item>
        <item>"Kathmandu(काठमाडौँ)"</item>
        <item>"Lalitpur(ललितपुर)"</item>
        <item>"Makawanpur(मकवानपुर)"</item>
    </string-array>
    <string-array name="rural_municipality">
        <item>"N/A"</item>
        <item>"Kalika Rural Municipality (कालिका गाउँपालिका)"</item>
        <item>"Uttargaya Rural Municipality (उत्तरगया गाउँपालिका)"</item>
    </string-array>
    <string-array name="current_living_situation">
        <item>"N/A"</item>
        <item>"At own house(आफ्नै घरमा)"</item>
        <item>"At relatives house(आफन्तको घरमा)"</item>
        <item>"At temporary shelter(अस्थाइ बसोबास)"</item>
        <item>"At rented house(भाडाको घरमा)"</item>
        <item>"Others(अन्य)"</item>
    </string-array>
    <string-array name="build_by">
        <item>"N/A"</item>
        <item>"Constructed with technical and financial support(प्राविधिक र आर्थिक सहयोगमा निर्माण गरेको)"</item>
        <item>"On your own(आफैँले बनाएको)"</item>
    </string-array>
    <string-array name="consctruction_type">
        <item>"N/A"</item>
        <item>"Stone Mud masonry (RCC Ties/Timber Ties)(ढुङ्गाको गाह्रोमा माटोको जोडाई )"</item>
        <item>"Stone Cement Masonry(ढुङ्गाको गाह्रोमा सिमेन्टको जोडाई)"</item>
        <item>"Brick Mud Masonry (RCC Ties/Timber Ties)(इट्टाको गाह्रोमा माटोको जोडाई)"</item>
        <item>"Brick Cement Masonry"(इट्टाको गाह्रोमा सिमेन्टको जोडाई)</item>
        <item>"RCC(आर. सि. सि.)"</item>
    </string-array>
    <string-array name="received_support">
        <item>"N/A"</item>
        <item>"In Cash(पैसामा)"</item>
        <item>"In Kind(सामानमा)"</item>
    </string-array>
    <string-array name="installment">
        <item>"N/A"</item>
        <item>"First Installment(पहिलो किस्ता)"</item>
        <item>"Second Installment(दोस्रो किस्ता)"</item>
        <item>"Third Installment(तेस्रो किस्ता)"</item>
    </string-array>
    <string-array name="family_income_source">
        <item>"N/A"</item>
        <item>"Agriculture(कृषि)"</item>
        <item>"Business/Enterprises(व्यापार व्यवसाय)"</item>
        <item>"Salaried job(तलबी काम)"</item>
        <item>"Wage labor(ज्याला मजदुरी)"</item>
        <item>"Remittance(रेमिट्यान्स)"</item>
        <item>"Pension(पेन्सन)"</item>
        <item>"Rent(भाडा)"</item>
        <item>"Bank interest(बैँकको ब्याज)"</item>
        <item>"Others(अन्य)"</item>
    </string-array>
    <string-array name="savings_per_month">
        <item>"N/A"</item>
        <item>"0-50(५० भन्दा कम)"</item>
        <item>"50-100(५०-१००)"</item>
        <item>"100-500(१००-५००)"</item>
        <item>"500-1000(५००-१,०००)"</item>
        <item>"Above 1000(१००० भन्दा बढी)"</item>
    </string-array>
    <string-array name="tentative_monthly_income">
        <item>"N/A"</item>
        <item>"Below 5000(५००० भन्दा कम)"</item>
        <item>"5000-10,000(५,०००-१०,०००)"</item>
        <item>"10,000-20,000(१०,०००-२०,०००)"</item>
        <item>"20,000-50,000(२०,०००-५०,०००)"</item>
        <item>"50,000 and above(५०,००० भन्दा बढी)"</item>
    </string-array>
</resources>