<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity">

    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            card_view:cardBackgroundColor="@color/transparent"
            card_view:cardElevation="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin"
                android:orientation="vertical">
                <!--recommendation regarding reconstruction-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <AutoCompleteTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:hint="@string/stringF5"
                        android:inputType="text|textMultiLine"
                        android:textColor="@color/black"
                        android:singleLine="false"
                        android:id="@+id/capacity_building_recommendation_regarding_reconstruction" />
                </android.support.design.widget.TextInputLayout>


                <!--any specific information-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:hint="@string/stringF6"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:id="@+id/capacity_building_any_specific_info" />
                </android.support.design.widget.TextInputLayout>

                <!--gap  identifier by surveyor-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="45dp"
                        android:hint="@string/stringF7"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:id="@+id/capacity_building_identified_gap"
                        />
                </android.support.design.widget.TextInputLayout>


                <!-- Next -->
                <android.support.v7.widget.CardView
                    android:id="@+id/cv_SaveSend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    card_view:cardBackgroundColor="@color/transparent"
                    card_view:cardElevation="1dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="@dimen/layout_margin"
                        android:padding="5dp">

                        <Button
                            android:id="@+id/water_sanitation_send"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/button_pressed_hwc_light"
                            android:text="@string/sendBtnText"
                            android:textColor="#ffffff" />

                        <Button
                            android:id="@+id/water_sanitation_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:background="@drawable/button_pressed_hwc_light"
                            android:text="@string/saveBtnText"
                            android:textColor="#ffffff" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </ScrollView>

</RelativeLayout>

